examples/server-side-diff/mutate-policy.yaml
# This policy sets the imagePullPolicy to Always if the image tag is latest.
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: set-image-pull-policy
spec:
  rules:
    - name: set-image-pull-policy
      match:
        any:
        - resources:
            kinds:
            - Deployment
            namespaces:
            - server-side-diff
      mutate:
        patchStrategicMerge:
          spec:
            template:
              spec:
                containers:
                  # match images which end with :latest
                  - (image): "*:latest"
                    # set the imagePullPolicy to "Always"
                    imagePullPolicy: "Always"
